<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UHF-G</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invenroty">Inventory</string>
    <string name="frequency_settings">Frequency Settings</string>
    <string name="settings">Settings</string>
    <string name="sn">SN</string>
    <string name="tag_type">type</string>
    <string name="epc">EPC</string>
    <string name="password">PASSWORD</string>
    <string name="user">USER</string>
    <string name="tag_count">Count</string>
    <string name="rssi">rssi</string>
    <string name="multi_tag">Multi tag</string>
    <string name="tid">TID</string>
    <string name="loop">loop</string>
    <string name="type_6c">6C</string>
    <string name="type_6b">6B</string>
    <string name="type_gb">GB</string>
    <string name="type_gjb">GJB</string>
    <string name="all_tags">Tag:</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="start_inventory">Start</string>
    <string name="stop_inventory">Stop</string>
    <string name="cus_read">Cus read</string>
    <string name="excel_export">Excel export</string>
    <string name="clean">Clean</string>
    <string name="exit_app">Press again exit app</string>
    <string name="module_init_success">Module init success</string>
    <string name="module_init_fail">Module init fail</string>
    <string name="communication_timeout">timeout</string>
    <string name="unknown">unknown</string>
    <string name="read_write_tag">Read Write tag</string>
    <string name="modify_epc">modify EPC</string>
    <string name="tag_select">Select tag:</string>
    <string name="start_addr">Addr(word):</string>
    <string name="length">length(word):</string>
    <string name="access_password">Access password(hex):</string>
    <string name="data">write data(hex):</string>
    <string name="read_data">read data(hex):</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="new_epc">New EPC(hex):</string>
    <string name="please_input_hex_string">please input hex EPC data</string>
    <string name="select_epc">select epc:</string>
    <string name="led_inventory">Led inventory</string>
    <string name="lock_tag">Lock tag</string>
    <string-array name="lock_data">
        <item>Access</item>
        <item>Kill password</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="lock_type">
        <item>Open</item>
        <item>Lock</item>
        <item>Permanent lock</item>
    </string-array>
    <string name="lock_tips">Tips:Please change the password before locking tag</string>
    <string name="kill_tag">Kill tag</string>
    <string name="kill_password">Kill password(hex):</string>
    <string name="please_inventory">Please inventory tag before reading and writing</string>
    <string name="start_address_not_null">Starting address cannot be empty</string>
    <string name="len_not_null">Length cannot be empty</string>
    <string name="access_password_not_null">Access password cannot be empty</string>
    <string name="read_fail">Read fail</string>
    <string name="write_fail">Write fail</string>
    <string name="write_success">Write success</string>
    <string name="filter">Filter</string>
    <string name="please_input_right_access_password">Please enter a hex password of 4 bytes in length</string>
    <string name="please_input_right_write_data">Please enter hex data with double byte digit length</string>
    <string name="please_input_right_epc">Please enter hex EPC data with double byte digit length</string>
    <string name="modify_success">The new EPC has been modified successfully. Please re inventory</string>
    <string name="modify_fail">modify fail</string>
    <string name="lock_success">lock success</string>
    <string name="lock_fail">lock fail</string>
    <string name="kill_success">kill success</string>
    <string name="kill_fail">kill fail</string>
    <string name="base_settings">Base settings</string>
    <string-array name="work_freq">
        <item>China1_920_925</item>
        <item>FCC_902_928</item>
        <item>EU_865_867</item>
        <item>ALL_840_960</item>
    </string-array>
    <string name="power">Power:</string>
    <string name="temperature">temperature:</string>
    <string name="temp">temp</string>
    <string name="inventory_settings">Inventory setting</string>
    <string name="query">query</string>
    <string name="q_value">Q value:</string>
    <string name="inventory_type">target:</string>
    <string name="fastid">FastID</string>
    <string name="query_success">query success</string>
    <string name="query_fail">query fail</string>
    <string name="query_region_fail">query region fail</string>
    <string name="set_success">set success</string>
    <string name="set_fail">set fail</string>
    <string name="help">help</string>
    <string name="store">store</string>
    <string name="export_excel_need_permission">Permissions required for exporting Excel</string>
    <string name="firmware">Firmware version:%s</string>
    <string name="soft_version">Soft version:%s</string>
    <string name="version_date">Date:%s</string>
    <string name="about">About</string>
    <string name="epc_assemble_link">EPC组装链接</string>
    <string name="take_photo">拍照</string>
    <string name="take_photo_ocr">拍照识别</string>
    <string name="scan_epc">扫描EPC</string>
    <string name="upload_data">上传数据</string>
    <string name="server_connection_test">服务器连接测试</string>
    <string name="advanced_camera">高级相机</string>
    <string name="mask_mode">遮罩模式</string>
    <string name="paint_mode">涂抹模式</string>
    <string name="crop_image">裁剪图片</string>
    <string name="recognize_text">识别文字</string>
    <string name="connection_success">连接成功</string>
    <string name="connection_failed">连接失败</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="photo_mask_mode">遮罩模式</string>
    <string name="switch_to_paint_mode">切换到涂抹模式</string>
    <string name="adjust_recognition_area">调整识别区域</string>
    <string name="retake_photo">重新拍照</string>
    <string name="confirm_crop">确认裁剪</string>
    <string name="step_1_scan_epc">步骤1: 扫描EPC标签</string>
    <string name="stop_scan">停止扫描</string>
    <string name="no_epc_scanned">未扫描到EPC</string>
    <string name="step_2_input_assemble">步骤2: 输入组装件ID</string>
    <string name="enter_assemble_id_manual">手动输入组装件ID</string>
    <string name="clear">清除</string>
    <string name="step_3_confirm_upload">步骤3: 确认并上传</string>
    <string name="please_scan_epc_and_enter_assemble">请先扫描EPC并输入组装件ID</string>
    <string name="confirm_upload">确认上传</string>
    <string name="save_local">保存到本地</string>
    <string name="status">状态</string>
    <string name="network_checking">网络检查中...</string>
    <string name="ready_to_start">准备就绪</string>
    <string name="photo_paint_mode">涂抹模式</string>
    <string name="switch_to_mask_mode">切换到遮罩模式</string>
    <string name="network_server_offline">服务器离线</string>
    <string name="network_server_online">服务器在线</string>
    <string name="uhf_module_not_initialized">UHF模块未初始化</string>
    <string name="scanning_for_epc">正在扫描EPC...</string>
    <string name="start_epc_scanning">开始EPC扫描</string>
    <string name="epc_scanned_successfully">EPC扫描成功</string>
    <string name="epc_scanning_stopped">EPC扫描已停止</string>
    <string name="please_scan_epc_first">请先扫描EPC</string>
    <string name="please_enter_assemble_id">请输入组装件ID</string>
    <string name="please_enter_or_scan_assemble_id">请输入或扫描组装件ID</string>
    <string name="epc_with_colon">EPC:</string>
    <string name="assemble_id_with_colon">组装件ID:</string>
    <string name="ready_to_upload">准备上传</string>
    <string name="uploading_to_server">上传到服务器中...</string>
    <string name="successfully_uploaded_to_server">成功上传到服务器</string>
    <string name="upload_successful">上传成功</string>
    <string name="server_error">服务器错误</string>
    <string name="server_unreachable_save_locally">服务器不可达，已保存到本地</string>
    <string name="link_saved_locally">链接已保存到本地</string>
    <string name="saved_locally_successfully">本地保存成功</string>
    <string name="checking_server_connectivity">检查服务器连接中...</string>
    <string name="processing_image_with_ocr">正在处理图像识别...</string>
    <string name="ocr_completed_successfully">图像识别完成</string>
    <string name="ocr_processing_failed">图像识别失败</string>
    <string name="no_text_recognized_from_image">图像中未识别到文字</string>
    <string name="failed_to_process_image">图像处理失败</string>
    <string name="recognition_area">识别区域</string>
    <string name="draw_text_area">绘制文字识别区域</string>
    <string name="help_tips">



    </string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="temp_tag">Temperature tag</string>
    <string name="stop_read">Stop read</string>
    <string name="timeInterval">Interval:</string>
    <string name="dwelltime">DwellTime:</string>
    <string name="strrb1">Performance preferred</string>
    <string name="strrb2">Balanced</string>
    <string name="strrb3">Energy saving</string>
    <string name="strrb4">Custom</string>
    <string name="getstr">Get</string>
    <string name="setstr">Set</string>
    <string name="Label">label</string>
    <string-array name="temp_manufacturer">
        <item>Yuehe tag</item>
        <item>Yilian tag</item>
    </string-array>
    <string-array name="session_arrays">
        <item>S0</item>
        <item>S1</item>
        <item>S2-Multi_tag</item>
        <item>S3</item>
    </string-array>
    <string-array name="inventory_type_arrays">
        <item>A</item>
        <item>B</item>
        <item>A|B</item>
    </string-array>
    <string-array name="q_value_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4-Multi_tag</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>

    </string-array>
    <string-array name="power_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
    </string-array>
</resources>